# pikiwidb-folly

./: CMakeLists.txt  README.md
folly/: Bits.h  CPortability.h  ConstexprMath.h  Conv.h  CppAttributes.h  CpuId.h  Demangle.cpp  Demangle.h  Exception.h  ExceptionString.cpp  ExceptionString.h  Executor.cpp  Executor.h  Expected.h  FBString.h  Function.h  Hash.h  Indestructible.h  Likely.h  Memory.h  MicroLock.cpp  MicroLock.h  Optional.h  Portability.h  Preprocessor.h  Range.h  ScopeGuard.cpp  ScopeGuard.h  SharedMutex.cpp  SharedMutex.h  SingletonThreadLocal.h  ThreadLocal.h  Traits.h  Unit.h  Utility.h
folly/concurrency/: CacheLocality.cpp  CacheLocality.h  ConcurrentHashMap.h
folly/container/: Access.h  F14Set-fwd.h  F14Set.h  Foreach-inl.h  Foreach.h  HeterogeneousAccess-fwd.h  HeterogeneousAccess.h  Iterator.h  View.h
folly/detail/: FileUtilDetail.cpp  FileUtilDetail.h  Futex-inl.h  Futex.cpp  Futex.h  Iterators.h  RangeCommon.h  RangeSse42.h  Singleton.h  StaticSingletonManager.cpp  StaticSingletonManager.h  ThreadLocalDetail.cpp  ThreadLocalDetail.h  UniqueInstance.h
folly/executors/: InlineExecutor.cpp  InlineExecutor.h  QueuedImmediateExecutor.cpp  QueuedImmediateExecutor.h
folly/functional/: ApplyTuple.h  Invoke.h
folly/hash/: Hash.h  SpookyHashV1.h  SpookyHashV2.h
folly/lang/: Align.h  Assume.h  Bits.h  Builtin.h  Byte.h  CArray.h  CString.cpp  CString.h  CheckedMath.h  CustomizationPoint.h  Exception.cpp  Exception.h  Extern.h  Hint-inl.h  Hint.h  Launder.h  New.h  Pretty.h  RValueReferenceWrapper.h  SafeAssert.cpp  SafeAssert.h  StaticConst.h  (+5 more)
(+60 files in other folders)
